[package]
name = "ruts-tg-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
log = "0.4"
pretty_env_logger = "0.5"
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["socks"] }
chrono = "0.4.40"
serde_json = "1.0.140"
